--- a/factions.html
+++ b/factions.html
@@ -36,16 +36,16 @@
                             <a href="factions.html#avari">Avari</a>
                             <a href="factions.html#beornings">Beornings</a>
                             <a href="factions.html#dale">Dale</a>
-                            <a href="factions.html#dol_guldur">Dol_Guldur</a>
+                            <a href="factions.html#dol_guldur">Dol Guldur</a>
                             <a href="factions.html#dorwinion">Dorwinion</a>
                             <a href="factions.html#dunland">Dunland</a>
-                            <a href="factions.html#durins">Durins_Folk</a>
-                            <a href="factions.html#ered_luin">Ered_Luin_Dwarves</a>
+                            <a href="factions.html#durins">Durins Folk</a>
+                            <a href="factions.html#ered_luin">Ered Luin Dwarves</a>
                             <a href="factions.html#eregion">Eregion</a>
                             <a href="factions.html#fangorn">Fangorn</a>
-                            <a href="factions.html#harad_gulf">Gulf_of_Harad</a>
+                            <a href="factions.html#harad_gulf">Gulf of Harad</a>
                             <a href="factions.html#gundamar">Gundamar</a>
-                            <a href="factions.html#half_trolls">Half Trolls</a>
+                            <a href="factions.html#half_trolls">Half-Trolls</a>
                             <a href="factions.html#harnedor">Harnedor</a>
                             <a href="factions.html#hobbits">Hobbits</a>
                             <a href="factions.html#isengard">Isengard</a>
@@ -55,20 +55,20 @@
                             <a href="factions.html#mordor">Mordor</a>
                             <a href="factions.html#morwaith">Morwaith</a>
                             <a href="factions.html#nomads">Nomads</a>
-                            <a href="factions.html#orocarni">Orocarni_Dwarves</a>
-                            <a href="factions.html#reunited_kingdom">Reunited_Kingdom</a>
+                            <a href="factions.html#orocarni">Orocarni Dwarves</a>
+                            <a href="factions.html#reunited_kingdom">Reunited Kingdom</a>
                             <a href="factions.html#rhudaur">Rhudaur</a>
                             <a href="factions.html#rhudel">Rhudel</a>
                             <a href="factions.html#rivendell">Rivendell</a>
                             <a href="factions.html#rohan">Rohan</a>
-                            <a href="factions.html#southron_coast">Southron_Coast</a>
+                            <a href="factions.html#southron_coast">Southron Coast</a>
                             <a href="factions.html#taurethrim">Taurethrim</a>
                             <a href="factions.html#umbar">Umbar</a>
-                            <a href="factions.html#corsairs">Corsairs_of_the_Coast</a>
-                            <a href="factions.html#woodelves">Woodland_Realm</a>
+                            <a href="factions.html#corsairs">Corsairs of the Coast</a>
+                            <a href="factions.html#woodelves">Woodland Realm</a>
                             <a href="factions.html#woodmen">Woodmen</a>
                             <a href="factions.html#bangad">Bangad Minhiriath</a>
-                            <a href="factions.html#haradmnts">Harad_Mountains</a>
+                            <a href="factions.html#haradmnts">Harad Mountains</a>
                             <a href="factions.html#waegmundig">Waegmundig</a>
                             <a href="factions.html#wanderer">Wanderer</a>
                         </div>
@@ -87,16 +87,16 @@
             <a href="factions.html#avari">Avari</a><br>
             <a href="factions.html#beornings">Beornings</a><br>
             <a href="factions.html#dale">Dale</a><br>
-            <a href="factions.html#dol_guldur">Dol_Guldur</a><br>
+            <a href="factions.html#dol_guldur">Dol Guldur</a><br>
             <a href="factions.html#dorwinion">Dorwinion</a><br>
             <a href="factions.html#dunland">Dunland</a><br>
-            <a href="factions.html#durins">Durins_Folk</a><br>
-            <a href="factions.html#ered_luin">Ered_Luin_Dwarves</a><br>
+            <a href="factions.html#durins">Durins Folk</a><br>
+            <a href="factions.html#ered_luin">Ered Luin Dwarves</a><br>
             <a href="factions.html#eregion">Eregion</a><br>
             <a href="factions.html#fangorn">Fangorn</a><br>
-            <a href="factions.html#harad_gulf">Gulf_of_Harad</a><br>
+            <a href="factions.html#harad_gulf">Gulf of Harad</a><br>
             <a href="factions.html#gundamar">Gundamar</a><br>
-            <a href="factions.html#half_trolls">Half Trolls</a><br>
+            <a href="factions.html#half_trolls">Half-Trolls</a><br>
             <a href="factions.html#harnedor">Harnedor</a><br>
             <a href="factions.html#hobbits">Hobbits</a><br>
             <a href="factions.html#isengard">Isengard</a><br>
@@ -106,33 +106,376 @@
             <a href="factions.html#mordor">Mordor</a><br>
             <a href="factions.html#morwaith">Morwaith</a><br>
             <a href="factions.html#nomads">Nomads</a><br>
-            <a href="factions.html#orocarni">Orocarni_Dwarves</a><br>
-            <a href="factions.html#reunited_kingdom">Reunited_Kingdom</a><br>
+            <a href="factions.html#orocarni">Orocarni Dwarves</a><br>
+            <a href="factions.html#reunited_kingdom">Reunited Kingdom</a><br>
             <a href="factions.html#rhudaur">Rhudaur</a><br>
             <a href="factions.html#rhudel">Rhudel</a><br>
             <a href="factions.html#rivendell">Rivendell</a><br>
             <a href="factions.html#rohan">Rohan</a><br>
-            <a href="factions.html#southron_coast">Southron_Coast</a><br>
+            <a href="factions.html#southron_coast">Southron Coast</a><br>
             <a href="factions.html#taurethrim">Taurethrim</a><br>
             <a href="factions.html#umbar">Umbar</a><br>
-            <a href="factions.html#corsairs">Corsairs_of_the_Coast</a><br>
-            <a href="factions.html#woodelves">Woodland_Realm</a><br>
+            <a href="factions.html#corsairs">Corsairs of the Coast</a><br>
+            <a href="factions.html#woodelves">Woodland Realm</a><br>
             <a href="factions.html#woodmen">Woodmen</a><br>
             <a href="factions.html#bangad">Bangad Minhiriath</a><br>
-            <a href="factions.html#haradmnts">Harad_Mountains</a><br>
+            <a href="factions.html#haradmnts">Harad Mountains</a><br>
             <a href="factions.html#waegmundig">Waegmundig</a><br>
             <a href="factions.html#wanderer">Wanderer</a><br>
     </aside>
     <article id="avari">
         <h4 class="headlinearticles"> Avari </h4>
         <p>
-            The Avari are the elves of the east. Living in the forest in the shadow of the Orocarni, they live a peaceful live.<br>
-            The Avari elves are using Woodland Realm alignment, units and gear on Ardas Legends.
+            Avari
         </p>
     </article>
     <p class="between">
         <br>
     </p>
+    <article id="beornings">
+        <h4 class="headlinearticles"> Beornings </h4>
+        <p>
+            Beornings
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="dale">
+        <h4 class="headlinearticles"> Dale </h4>
+        <p>
+            Dale
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="dol_guldur">
+        <h4 class="headlinearticles"> Dol Guldur </h4>
+        <p>
+            Dol Guldur
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="dorwinion">
+        <h4 class="headlinearticles"> Dorwinion </h4>
+        <p>
+            Dorwinion
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="dunland">
+        <h4 class="headlinearticles"> Dunland </h4>
+        <p>
+            Dunland
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="durins">
+        <h4 class="headlinearticles"> Durins Folk </h4>
+        <p>
+            Durins Folk
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="ered_luin">
+        <h4 class="headlinearticles"> Ered Luin Dwarves </h4>
+        <p>
+            Ered Luin Dwarves
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="eregion">
+        <h4 class="headlinearticles"> Eregion </h4>
+        <p>
+            Eregion
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="fangorn">
+        <h4 class="headlinearticles"> Fangorn </h4>
+        <p>
+            Fangorn
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="harad_gulf">
+        <h4 class="headlinearticles"> Gulf of Harad </h4>
+        <p>
+            Gulf of Harad
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="gundamar">
+        <h4 class="headlinearticles"> Gundamar </h4>
+        <p>
+            Gundamar
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="half_trolls">
+        <h4 class="headlinearticles"> Half-Trolls </h4>
+        <p>
+            Half-Trolls
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="harnedor">
+        <h4 class="headlinearticles"> Harnedor </h4>
+        <p>
+            Harnedor
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="hobbits">
+        <h4 class="headlinearticles"> Hobbits </h4>
+        <p>
+            Hobbits
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="isengard">
+        <h4 class="headlinearticles"> Isengard </h4>
+        <p>
+            Isengard
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="khand">
+        <h4 class="headlinearticles"> Khand </h4>
+        <p>
+            Khand
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="lindon">
+        <h4 class="headlinearticles"> Lindon </h4>
+        <p>
+            Lindon
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="lothlorien">
+        <h4 class="headlinearticles"> Lothlórien </h4>
+        <p>
+            "Lothlórien is an elven faction, with established alliances with Rivendell and Rohan.<br>
+            We are a faction based around fine building, pvp, and trade. The faction is ruled by the sexy bastard Kai8027.<br>
+            Cerin Silmë, the main village, is a network of elegant and well protected treehouses, as well as a grand smithy, docks, and farm.<br>
+            If you enjoy smoking weed, drinking booze, and getting rich, this is the perfect faction." - Kai8027, Faction Leader of Lothlórien<br>
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+     <article id="mordor">
+        <h4 class="headlinearticles"> Mordor </h4>
+        <p>
+            "Mordor is a realm surrounded by dark mountains, including orcs, black uruks, ologs and other dark creatures.<br>
+            They are all ruled by the powerful Dark Lord, Sauron, and his servants, the Nazgûls.<br>
+            While the Dark Lord lies in Barad-Dûr, the Witch-King takes the lead of the evil armies.<br>
+            The Witch-King is so, the main leader of Mordor's faction and Minas Morgul became the new capital of Mordor.<br>
+            He fought against Gondor with his allies, Gundamar, and took Pellenor Fields, Lossarnach, Dol Amroth, Lebennin and Ithilien.<br>
+            Later, he gave a city of Lossarnach to Glupe, King of Bangad-Minhiriath, and made an economical alliance.<br>
+            Mordor is the faction with the most of lands and claimbuilds. It is also one of the strongest faction, if it's not the strongest!" - Jukoz, Faction Leader of Mordor<br>
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="morwaith">
+        <h4 class="headlinearticles"> Morwaith </h4>
+        <p>
+            Morwaith
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="nomads">
+        <h4 class="headlinearticles"> Nomads </h4>
+        <p>
+            Nomads
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="orocarni">
+        <h4 class="headlinearticles"> Orocarni Dwarves </h4>
+        <p>
+            Orocarni Dwarves
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="reunited_kingdom">
+        <h4 class="headlinearticles"> Reunited Kingdom </h4>
+        <p>
+            Reunited Kingdom
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="rhudaur">
+        <h4 class="headlinearticles"> Rhudaur </h4>
+        <p>
+            Rhudaur
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="rhudel">
+        <h4 class="headlinearticles"> Rhudel </h4>
+        <p>
+            Rhudel
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="rivendell">
+        <h4 class="headlinearticles"> Rivendell </h4>
+        <p>
+            Rivendell
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="rohan">
+        <h4 class="headlinearticles"> Rohan </h4>
+        <p>
+            "The Rohirrim live in the east of Middle-Earth. They live under constant threat of Isengard but live a pretty peaceful life.<br>
+            On Ardas Legends they use their regular faction gear. They have allies everywhere for when war breaks out.<br>
+            They are allied to the Elves of Imladris, LothlÓrien and Dale. With many more to come.<br>
+            So far there are 2 claimbuilds, the village of Ashold and ofcourse a castle to defend their villagers!<br>
+            As for their leader, his IGN is Wizles, better known as Belagorn. His discord is Wizles#4125. He is a strong believer of getting Rohan back to its former glory.<br>
+            A strong faction the bad-guys don’t want to mess with!" - Wizles, faction Leader of Rohan<br>
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="lindon">
+        <h4 class="headlinearticles"> Lindon </h4>
+        <p>
+            Lindon
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="lindon">
+        <h4 class="headlinearticles"> Lindon </h4>
+        <p>
+            Lindon
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="lindon">
+        <h4 class="headlinearticles"> Lindon </h4>
+        <p>
+            Lindon
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="lindon">
+        <h4 class="headlinearticles"> Lindon </h4>
+        <p>
+            Lindon
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="lindon">
+        <h4 class="headlinearticles"> Lindon </h4>
+        <p>
+            Lindon
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="lindon">
+        <h4 class="headlinearticles"> Lindon </h4>
+        <p>
+            Lindon
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="lindon">
+        <h4 class="headlinearticles"> Lindon </h4>
+        <p>
+            Lindon
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="lindon">
+        <h4 class="headlinearticles"> Lindon </h4>
+        <p>
+            Lindon
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="lindon">
+        <h4 class="headlinearticles"> Lindon </h4>
+        <p>
+            Lindon
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="lindon">
+        <h4 class="headlinearticles"> Lindon </h4>
+        <p>
+            Lindon
+        </p>
+    </article>
     </main>
         <footer>
             <br>
