--- a/rules.html
+++ b/rules.html
@@ -147,7 +147,7 @@
                 7.	Roleplay gear means the armour and weapons your faction provides if you do not have a roleplay character.<br>
                 8.	A faction can acquire access to other faction’s weapons (weapons only not the armour) by trade with another faction. Weapon trade may only be initiated by a faction leader.<br>
                 9.	If you use a roleplay character you may use the gear you described in your application, even if it is not the faction provided gear (gear has to approve the gear in the application).<br>
-                10.	A player can acquire gear from other factions through roleplay, that gas been accepted by staff.<br>
+                10.	A player can acquire gear from other factions through roleplay, that has been accepted by staff.<br>
             </p>
         </article>
         <p class="between">
