--- a/staff.html
+++ b/staff.html
@@ -87,8 +87,17 @@ and open the template in the editor.
         </header>
     <main>
         <p>
-          This is the Staff Page of the Ardas Legends Wiki.<br>
-          We are still working on this pages content and bid you patience.<br>
+          Ardas Legends is a server hosted at Pebblehost. 
+          The Owner is nodas1995 (Discord: Nodas1995#4832)<br>
+          The Dev is Anehdel (Discord: Anedhel#4770)<br>
+          The rest of the Staff Team is devided into Admins and Moderators.<br>
+            Admins:<br>
+            bakbar (Discord: Bakbar#2973)
+            jvanhierden (Discord: jvanhierden#4475)
+            MCWelles (Discord: MCWelles#7039)
+            20damian07 (Discord: Damian#3965)
+            Moderators:<br>
+            glupe1 (Discord: Adam (Glupe)#9264)
         </p>
     </main>
         <footer>
