--- a/staff.html
+++ b/staff.html
@@ -89,15 +89,15 @@ and open the template in the editor.
         <p>
           Ardas Legends is a server hosted at Pebblehost. 
           The Owner is nodas1995 (Discord: Nodas1995#4832)<br>
-          The Dev is Anehdel (Discord: Anedhel#4770)<br>
+          The Dev is Anedhel (Discord: Anedhel#4770)<br>
           The rest of the Staff Team is devided into Admins and Moderators.<br>
             Admins:<br>
-            bakbar (Discord: Bakbar#2973)
-            jvanhierden (Discord: jvanhierden#4475)
-            MCWelles (Discord: MCWelles#7039)
-            20damian07 (Discord: Damian#3965)
+            bakbar (Discord: Bakbar#2973)<br>
+            jvanhierden (Discord: jvanhierden#4475)<br>
+            MCWelles (Discord: MCWelles#7039)<br>
+            20damian07 (Discord: Damian#3965)<br>
             Moderators:<br>
-            glupe1 (Discord: Adam (Glupe)#9264)
+            glupe1 (Discord: Adam (Glupe)#9264)<br>
         </p>
     </main>
         <footer>
