--- a/impressum.html
+++ b/impressum.html
@@ -25,6 +25,7 @@ and open the template in the editor.
                 Minecraft Server IP: 37.187.205.224:25572<br>
                 <a href="https://discord.gg/Q7AjZVf">Discord Server</a><br>
                 <a href="https://ardas-legends.fandom.com/">Fandom Wiki</a>
+                <a href="https://github.com/AnedhelAulendur/ArdasLegendsPlugin"Custom Plugin</a>
             </p>    
             <br>
         </main>
