--- a/impressum.html
+++ b/impressum.html
@@ -24,8 +24,8 @@ and open the template in the editor.
                 A Lord of the Rings Minecraft Server<br>
                 Minecraft Server IP: 37.187.205.224:25572<br>
                 <a href="https://discord.gg/Q7AjZVf">Discord Server</a><br>
-                <a href="https://ardas-legends.fandom.com/">Fandom Wiki</a>
-                <a href="https://github.com/AnedhelAulendur/ArdasLegendsPlugin">Custom Plugin</a>
+                <a href="https://ardas-legends.fandom.com/">Fandom Wiki</a><br>
+                <a href="https://github.com/AnedhelAulendur/ArdasLegendsPlugin">Custom Plugin</a><br>
             </p>    
             <br>
         </main>
