--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ and open the template in the editor.
             <br>
             <nav>
                 <h2>
-                    <a href="index.html" class="Navi">&#</a>
+                    <a href="index.html" class="Navi"><image src="Home Button.png" alt= "Main Page"></a>
                     <div class="dropheadline">
                         <button class="dropheadlinebtn">
                             <a href="rules.html" class="Navi">Rules</a>
