--- a/staff.html
+++ b/staff.html
@@ -92,12 +92,16 @@ and open the template in the editor.
           The Dev is Anedhel (Discord: Anedhel#4770)<br>
           The rest of the Staff Team is devided into Admins and Moderators.<br>
             Admins:<br>
-            bakbar (Discord: Bakbar#2973)<br>
             jvanhierden (Discord: jvanhierden#4475)<br>
             MCWelles (Discord: MCWelles#7039)<br>
             20damian07 (Discord: Damian#3965)<br>
             Moderators:<br>
             glupe1 (Discord: Adam (Glupe)#9264)<br>
+            Jukot (Discord: Jukoz#7865)<br>
+        </p>
+        <p>
+            Retired in peace Staff:<br>
+            bakbar - Rip June 2020<br>
         </p>
     </main>
         <footer>
