Links for staff heads instead of set images
https://cravatar.eu/head/Anedhel
instead of img/Anedhel.png

--- a/staff.html
+++ b/staff.html
@@ -98,7 +98,7 @@ and open the template in the editor.
             </div>
             <div class="inline">
                 <h4 style="margin-top: 0px;">Developper</h4>
-                <img src="img/Anedhel.png" title="Anedhel">
+                <img src="https://cravatar.eu/head/Anedhel" title="Anedhel">
                 <p class="staff_names" style="margin-top: 0px;">Anedhel</p>
             </div>
         </div>
