--- a/staff.html
+++ b/staff.html
@@ -93,11 +93,11 @@ and open the template in the editor.
         <div> <!-- Owner and Developper -->
             <div class="inline">
                 <h4>Owner</h4>
-                <img src="img/nodas1995.png" title="Nodas">
+                <img src="https://cravatar.eu/head/nodas1995" title="Nodas">
                 <p class="staff_names" style="margin-top: 0px;">Nodas (nodas1995)</p>
             </div>
             <div class="inline">
-                <h4 style="margin-top: 0px;">Developper</h4>
+                <h4 style="margin-top: 0px;">Developer</h4>
                 <img src="https://cravatar.eu/head/Anedhel" title="Anedhel">
                 <p class="staff_names" style="margin-top: 0px;">Anedhel</p>
             </div>
@@ -105,30 +105,30 @@ and open the template in the editor.
         <div> <!-- Admins -->
             <h4 style="margin-bottom: 25px;">Admins</h4>
             <div class="inline">
-                <img src="img/jvanhierden.png" title="Ivan">
+                <img src="https://cravatar.eu/head/jvanhierden" title="Ivan">
                 <p class="staff_names" style="margin-top: 0px;">Ivan (jvanhierden)</p>
             </div>
             <div class="inline">
-                <img src="img/MCWelles.png" title="Welles">
+                <img src="https://cravatar.eu/head/MCWelles" title="Welles">
                 <p class="staff_names" style="margin-top: 0px;">Welles (MCWelles)</p>
             </div>
             <div class="inline">
-                <img src="img/20damian07.png" title="Daim">
+                <img src="https://cravatar.eu/head/20damian07" title="Daim">
                 <p class="staff_names" style="margin-top: 0px;">Daim (20damian07)</p>
             </div>
         </div>
         <div> <!-- Mods -->
             <h4 style="margin-bottom: 25px;">Mods</h4>
             <div class="inline">
-                <img src="img/Pokerino.png" title="Pokerino">
+                <img src="https://cravatar.eu/head/Pokerino" title="Pokerino">
                 <p class="staff_names" style="margin-top: 0px;">Pokerino</p>
             </div>
             <div class="inline">
-                <img src="img/glupe1.png" title="Glupe">
+                <img src="https://cravatar.eu/head/glupe1" title="Glupe">
                 <p class="staff_names" style="margin-top: 0px;">Glupe (glupe1)</p>
             </div>
             <div class="inline">
-                <img src="img/Jukoz.png" title="Jukoz">
+                <img src="https://cravatar.eu/head/Jukoz" title="Jukoz">
                 <p class="staff_names" style="margin-top: 0px;">Jukoz</p>
             </div>
         </div>
