Retired in peace
Added the "category" Retired in peace (Rip) to the staff page, and along side it bakbar

--- a/staff.html
+++ b/staff.html
@@ -132,24 +132,13 @@ and open the template in the editor.
                 <p class="staff_names" style="margin-top: 0px;">Jukoz</p>
             </div>
         </div>
-        <p>
-          
-          The Owner is nodas1995 (Discord: Nodas1995#4832)<br>
-          The Dev is Anedhel (Discord: Anedhel#4770)<br>
-          The rest of the Staff Team is devided into Admins and Moderators.<br>
-            Admins:<br>
-            jvanhierden (Discord: jvanhierden#4475)<br>
-            MCWelles (Discord: MCWelles#7039)<br>
-            20damian07 (Discord: Damian#3965)<br>
-            Moderators:<br>
-            Pokerino (Discord: Pokerino#7388)<br>
-            glupe1 (Discord: Adam (Glupe)#9264)<br>
-            Jukoz (Discord: Jukoz#7865)<br>
-        </p>
-        <p>
-            Retired in peace Staff:<br>
-            bakbar - Rip June 2020<br>
-        </p>
+        <div> <!-- Retired -->
+            <h4 style="margin-bottom: 25px;">Retired in peace (Rip)</h4>
+            <div class="inline">
+                <img src="https://cravatar.eu/head/bakbar" title="bakbar">
+                <p class="staff_names" style="margin-top: 0px;">bakbar - Rip June 2020</p>
+            </div>
+        </div>
     </div>
     </main>
         <footer>
