--- a/staff.html
+++ b/staff.html
@@ -138,6 +138,10 @@ and open the template in the editor.
                 <img src="https://cravatar.eu/head/bakbar" title="bakbar">
                 <p class="staff_names" style="margin-top: 0px;">bakbar - Rip June 2020</p>
             </div>
+            <div class="inline">
+                <img src="https://cravatar.eu/head/oveny" title="Oveny">
+                <p class="staff_names" style="margin-top: 0px;">Oveny - Rip May 2020</p>
+            </div>
         </div>
     </div>
     </main>
