Better nav-bar, color and padding
I spaced buttons with some padding, then removed background color, cause it wasn't good grey thing. Replaced cyan by this new darkish color that fit better, I think. I'll work tomorow on the mega list of factions, into compact one, and aside summary box too.

--- a/rules.html
+++ b/rules.html
@@ -11,7 +11,12 @@
             <br>
             <nav>
                 <h2>
-                    <a href="index.html" class="Navi">Main Page</a>
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
+                            <a href="index.html" class="Navi">Main Page</a>
+                        </button>
+                        
+                    </div>
                     <div class="dropheadline">
                         <button class="dropheadlinebtn">
                             <a href="rules.html" class="Navi">Rules</a>
@@ -73,8 +78,17 @@
                             <a href="factions.html#wanderer">Wanderer</a>
                         </div>
                     </div>
-                    <a href="claiming.html" class="Navi">Claiming</a>
-                    <a href="staff.html" class="Navi">Staff</a>
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
+                            <a href="claiming.html" class="Navi">Claiming</a>
+                        </button>
+                    </div>
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
+                            <a href="staff.html" class="Navi">Staff</a>
+                        </button>
+                    </div>
+                    
                 </h2>
             </nav>
             <br>
