--- a/staff.html
+++ b/staff.html
@@ -17,7 +17,11 @@ and open the template in the editor.
             <br>
             <nav>
                 <h2>
-                    <a href="index.html" class="Navi">Main Page</a>
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
+                            <a href="index.html" class="Navi">Main Page</a>
+                        </button>
+                    </div>
                     <div class="dropheadline">
                         <button class="dropheadlinebtn">
                             <a href="rules.html" class="Navi">Rules</a>
@@ -79,8 +83,17 @@ and open the template in the editor.
                             <a href="factions.html#wanderer">Wanderer</a>
                         </div>
                     </div>
-                    <a href="claiming.html" class="Navi">Claiming</a>
-                    <a href="staff.html" class="Navi">Staff</a>
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
+                            <a href="claiming.html" class="Navi">Claiming</a>
+                        </button>
+                    </div>
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
+                            <a href="staff.html" class="Navi">Staff</a>
+                        </button>
+                    </div>
+                    
                 </h2>
             </nav>
             <br>
