Drop-content better scoll/compact (aside problem)
I added "::-webkit-scrollbar" in css file to modify the scrollbar, feel free to modify if you want to do something better :)
Now the drop-down content is compact, scrollable with better one (I tried without scroll bar and it's bit confusing when you reach end)
Little problem, the <aside> have some padding between each buttons idk how to remove it, and my scrolls updates don't work on the aside thingy, maybe it's just the <aside> that don't allow the overflow-y: property.

--- a/rules.html
+++ b/rules.html
@@ -95,6 +95,9 @@
         </header>
         <main>
         <aside>
+            <div class="aside-content">
+                
+            </div>
             <a href="rules.html#explanation">Explanation</a><br>
             <a href="rules.html#general">General Rules</a><br>
             <a href="rules.html#pvp">PvP Rules</a><br>
