Removed Ardas Legends from Footer

--- a/rules.html
+++ b/rules.html
@@ -234,7 +234,7 @@
         <div class="push"></div>
         <footer>
             <br>
-            Ardas Legends<a href="impressum.html"> Impressum </a>
+            <a href="impressum.html"> Impressum </a>
             <br>
         </footer>
     </body>
