Removed Ardas Legends from Footer

--- a/staff.html
+++ b/staff.html
@@ -157,7 +157,7 @@ and open the template in the editor.
     </main>
         <footer>
             <br>
-            Ardas Legends<a href="impressum.html"> Impressum </a>
+            <a href="impressum.html"> Impressum </a>
             <br>
         </footer>
     </body>
