Removed Ardas Legends from Footer

--- a/factions.html
+++ b/factions.html
@@ -493,7 +493,7 @@
     </main>
         <footer>
             <br>
-            Ardas Legends<a href="impressum.html"> Impressum </a>
+            <a href="impressum.html"> Impressum </a>
             <br>
         </footer>
     </body>
