--- a/claiming.html
+++ b/claiming.html
@@ -105,7 +105,7 @@ and open the template in the editor.
     </main>
         <footer>
             <br>
-            Ardas Legends<a href="impressum.html"> Impressum </a>
+            <a href="impressum.html"> Impressum </a>
             <br>
         </footer>
     </body>
