Added the lotr mod to the impressum

--- a/impressum.html
+++ b/impressum.html
@@ -26,6 +26,7 @@ and open the template in the editor.
                 <a href="https://discord.gg/Q7AjZVf">Discord Server</a><br>
                 <a href="https://ardas-legends.fandom.com/">Fandom Wiki</a><br>
                 <a href="https://github.com/AnedhelAulendur/ArdasLegendsPlugin">Custom Plugin</a><br>
+                <a href="https://lotrminecraftmod.fandom.com/wiki/Updates#Update_36_--_The_Final_1.7.10_Update_.28June_12.2C_2020.29">Lord of the Rings Mod by Mevans</a><br>
             </p>    
             <br>
         </main>
