Adjusted the Claiming Section
Added a title for the Claiming File and the Map, as well as the Map

--- a/claiming.html
+++ b/claiming.html
@@ -98,10 +98,18 @@ and open the template in the editor.
             <br>
         </header>
     <main>
-        <p>
-          Welcome to the Claiming Page of the Ardas Legends Wiki.<br>
-          This page is still under construction, we bid you patients.<br>
-        </p>
+        <div> <!-- Claiming File -->
+            <div class="inline">
+                <h4>Claiming File</h4>
+                <!-- here i plan a download button for the claiming file -->
+            </div>
+        </div>
+        <div> <!-- Claiming Map-->
+            <div class="inline">
+                <h4>Claiming Map</h4>
+                <img src="Claimingmap.png">
+            </div>
+        </div>
     </main>
         <footer>
             <br>
