Updated the Style of the Claiming Sections Headlines

--- a/claiming.html
+++ b/claiming.html
@@ -100,13 +100,13 @@ and open the template in the editor.
     <main>
         <div> <!-- Claiming File -->
             <div class="inline">
-                <h4>Claiming File</h4>
+                <h4 class="headlinearticles">Claiming File</h4>
                 <!-- here i plan a download button for the claiming file -->
             </div>
         </div>
         <div> <!-- Claiming Map-->
             <div class="inline">
-                <h4>Claiming Map</h4>
+                <h4 class="headlinearticles">Claiming Map</h4>
                 <img src="Claimingmap.png">
             </div>
         </div>
