Claiming Map Box
changed the class of the claiming map div to "block" hopefully limiting the map a little

--- a/claiming.html
+++ b/claiming.html
@@ -104,7 +104,7 @@ and open the template in the editor.
                 <!-- here i plan a download button for the claiming file -->
             </div>
         </div>
-        <div> <!-- Claiming Map-->
+        <div class="block"> <!-- Claiming Map-->
             <div class="inline">
                 <h4 class="headlinearticles">Claiming Map</h4>
                 <img src="Claimingmap.png">
