Added style and alt to the Claimingmap.png
used 50% for both

--- a/claiming.html
+++ b/claiming.html
@@ -107,7 +107,7 @@ and open the template in the editor.
         <div class="block"> <!-- Claiming Map-->
             <div class="inline">
                 <h4 class="headlinearticles">Claiming Map</h4>
-                <img src="Claimingmap.png">
+                <img src="Claimingmap.png" alt="Ardas Legends Claiming Map" style="width: 50%;height:50%">
             </div>
         </div>
     </main>
