Claiming File and Map
Put both in one large div with 2 smaller ones, for better looks

--- a/claiming.html
+++ b/claiming.html
@@ -98,13 +98,11 @@ and open the template in the editor.
             <br>
         </header>
     <main>
-        <div> <!-- Claiming File -->
+        <div class="block"> <!-- Claiming File & Claiming Map-->
             <div class="inline">
                 <h4 class="headlinearticles">Claiming File</h4>
                 <!-- here i plan a download button for the claiming file -->
             </div>
-        </div>
-        <div class="block"> <!-- Claiming Map-->
             <div class="inline">
                 <h4 class="headlinearticles">Claiming Map</h4>
                 <img src="Claimingmap.png" alt="Ardas Legends Claiming Map" style="width: 85%;height:85%">
