--- a/factions.html
+++ b/factions.html
@@ -37,8 +37,10 @@
                             <a href="factions.html" class="Navi">Factions</a>
                         </button>
                         <div class="dropcontent">
-                            <a href="factions.html#avari">Avari</a>
+							<a href="factions.html#avari">Avari</a>
+                            <a href="factions.html#bangad">Bangad Minhiriath</a>
                             <a href="factions.html#beornings">Beornings</a>
+							<a href="factions.html#bree">Bree</a>
                             <a href="factions.html#dale">Dale</a>
                             <a href="factions.html#dol_guldur">Dol Guldur</a>
                             <a href="factions.html#dorwinion">Dorwinion</a>
@@ -50,6 +52,7 @@
                             <a href="factions.html#harad_gulf">Gulf of Harad</a>
                             <a href="factions.html#gundamar">Gundamar</a>
                             <a href="factions.html#half_trolls">Half-Trolls</a>
+                            <a href="factions.html#haradmnts">Harad Mountains</a>
                             <a href="factions.html#harnedor">Harnedor</a>
                             <a href="factions.html#hobbits">Hobbits</a>
                             <a href="factions.html#isengard">Isengard</a>
@@ -69,12 +72,10 @@
                             <a href="factions.html#taurethrim">Taurethrim</a>
                             <a href="factions.html#umbar">Umbar</a>
                             <a href="factions.html#corsairs">Corsairs of the Coast</a>
-                            <a href="factions.html#woodelves">Woodland Realm</a>
-                            <a href="factions.html#woodmen">Woodmen</a>
-                            <a href="factions.html#bangad">Bangad Minhiriath</a>
-                            <a href="factions.html#haradmnts">Harad Mountains</a>
                             <a href="factions.html#waegmundig">Waegmundig</a>
                             <a href="factions.html#wanderer">Wanderer</a>
+                            <a href="factions.html#woodelves">Woodland Realm</a>
+                            <a href="factions.html#woodmen">Woodmen</a>
                         </div>
                     </div>
                     <div class="dropheadline">
@@ -145,10 +146,28 @@
         <p class="between">
             <br>
         </p>
+        <article id="bangad">
+            <h4 class="headlinearticles"> Bangad Minhiriath </h4>
+            <p>
+                Bangad Minhiriath
+            </p>
+        </article>
+        <p class="between">
+            <br>
+        </p>
         <article id="beornings">
             <h4 class="headlinearticles"> Beornings </h4>
             <p>
                 Beornings
+            </p>
+        </article>
+        <p class="between">
+            <br>
+        </p>
+        <article id="bree">
+            <h4 class="headlinearticles"> Bree </h4>
+            <p>
+                Lindon
             </p>
         </article>
         <p class="between">
@@ -248,6 +267,15 @@
             <h4 class="headlinearticles"> Half-Trolls </h4>
             <p>
                 Half-Trolls
+            </p>
+        </article>
+        <p class="between">
+            <br>
+        </p>
+        <article id="haradmnts">
+            <h4 class="headlinearticles"> Harad Mountains </h4>
+            <p>
+                Harad Mountains
             </p>
         </article>
         <p class="between">
@@ -402,91 +430,73 @@
         <p class="between">
             <br>
         </p>
-        <article id="lindon">
-            <h4 class="headlinearticles"> Lindon </h4>
+        <article id="southron_coast">
+            <h4 class="headlinearticles"> Southron Coast </h4>
             <p>
-                Lindon
+                Southron Coast
             </p>
         </article>
         <p class="between">
             <br>
         </p>
-        <article id="lindon">
-            <h4 class="headlinearticles"> Lindon </h4>
+        <article id="taurethrim">
+            <h4 class="headlinearticles"> Taurethrim </h4>
             <p>
-                Lindon
+                Taurethrim
             </p>
         </article>
         <p class="between">
             <br>
         </p>
-        <article id="lindon">
-            <h4 class="headlinearticles"> Lindon </h4>
+        <article id="umbar">
+            <h4 class="headlinearticles"> Umbar </h4>
             <p>
-                Lindon
+                Umbar
             </p>
         </article>
         <p class="between">
             <br>
         </p>
-        <article id="lindon">
-            <h4 class="headlinearticles"> Lindon </h4>
+        <article id="corsairs">
+            <h4 class="headlinearticles"> Corsairs of the Coast </h4>
             <p>
-                Lindon
+                Corsairs of the Coast
             </p>
         </article>
         <p class="between">
             <br>
         </p>
-        <article id="lindon">
-            <h4 class="headlinearticles"> Lindon </h4>
+        <article id="waegmundig">
+            <h4 class="headlinearticles"> Waegmundig </h4>
             <p>
-                Lindon
+                Waegmundig
             </p>
         </article>
         <p class="between">
             <br>
         </p>
-        <article id="lindon">
-            <h4 class="headlinearticles"> Lindon </h4>
+        <article id="wanderer">
+            <h4 class="headlinearticles"> Wanderer </h4>
             <p>
-                Lindon
+                Wanderer
             </p>
         </article>
         <p class="between">
             <br>
         </p>
-        <article id="lindon">
-            <h4 class="headlinearticles"> Lindon </h4>
+        <article id="woodelves">
+            <h4 class="headlinearticles"> Woodland Realm </h4>
             <p>
-                Lindon
+                Woodland Realm
             </p>
         </article>
         <p class="between">
             <br>
         </p>
-        <article id="lindon">
-            <h4 class="headlinearticles"> Lindon </h4>
+        <article id="woodmen">
+            <h4 class="headlinearticles"> Woodmen </h4>
             <p>
-                Lindon
-            </p>
-        </article>
-        <p class="between">
-            <br>
-        </p>
-        <article id="lindon">
-            <h4 class="headlinearticles"> Lindon </h4>
-            <p>
-                Lindon
-            </p>
-        </article>
-        <p class="between">
-            <br>
-        </p>
-        <article id="lindon">
-            <h4 class="headlinearticles"> Lindon </h4>
-            <p>
-                Lindon
+                Woodmen
             </p>
         </article>
     </div>
